# egui_wasm_example

./: Cargo.toml  index.html
src/: main.rs
src/frames/: account.rs  auth.rs  mod.rs  navig.rs
src/utils/: req.rs
