[package]
name = "egui_wasm_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
serde = { version = "1.0.148", features = ["derive"]}
reqwest-wasm = "0.11.15"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = { version = "0.4.33", features = ["futures-core"] }
wasm-logger = "0.2.0"
log = "0.4.17"
rmp-serde = "1.1.1"
sha256 = "1.1.1"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
ehttp = "0.2.0"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
